# orchestrator

./: .gitignore  ARCHITECTURE.md  Cargo.toml  DIAGRAMS.md  EXAMPLES.md  INDEX.md  LICENSE-APACHE  LICENSE-MIT  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  check-deps.py  check-deps.sh  complete-setup.sh  config.example.toml  generate-icons.sh  setup-gui.sh  start-cli.sh  start-gui.sh  start.py  start.sh  tauri.conf.json
src/: error.rs  main.rs
src/classifier/: mod.rs
src/cli/: mod.rs
src/config/: mod.rs
src/drive/: mod.rs
src/gui/: commands.rs  mod.rs  state.rs  tray.rs
src/state/: mod.rs
src/sync/: mod.rs
src/watcher/: mod.rs
ui/: index.html  package.json  tailwind.config.js
ui/src/: App.tsx  index.css
ui/src/components/: ConfigEditor.tsx  Dashboard.tsx  DriveManager.tsx  FileTypeStats.tsx  PendingQueue.tsx  SyncHistory.tsx
