[package]
name = "file-orchestrator"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "fo"
path = "src/main.rs"

[lib]
name = "file_orchestrator"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = []
gui = ["tauri", "tauri-plugin-store"]

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Tauri dependencies (optional)
tauri = { version = "1.5", features = ["system-tray", "notification", "dialog-all", "fs-all", "path-all", "shell-open"], optional = true }
tauri-plugin-store = { version = "0.1", optional = true }

# CLI interface
clap = { version = "4.4", features = ["derive"] }

# Configuration management
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# File system watching
notify = "6.1"

# File type detection
infer = "0.15"
mime_guess = "2.0"

# Hashing
blake3 = "1.5"

# State management (embedded database)
sled = "0.34"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# System information
sysinfo = "0.30"

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# Async file operations
futures = "0.3"

# Datetime
chrono = { version = "0.4", features = ["serde"] }

[build-dependencies]
tauri-build = { version = "1.5", features = [] }


# Cross-platform path handling
path-clean = "1.0"
